# freivald

./: .gitignore  Cargo.toml  README.md
src/: freivald.rs  main.rs
