[package]
name = "clser"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19"
ark-bls12-381 = "0.3"
ark-std = "0.3"
getrandom = {version = "0.2.6", features =["js"]}
rand = { version = "0.8", features = [ "std", "std_rng" ] } # provides ark_std::rand::thread_rng
nalgebra = "0.31"
reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"